# rusty_cg

./: Cargo.toml  not_used.rs  type_erasure_example.rs
src/: card_components.rs  card_construction_kit.rs  cardconstructionkit.rs  cg_sys.rs  cgsys.rs  helpers.rs  main.rs  sprite_drag_drop.rs  sprite_interaction_plugin.rs  sprite_interactions.rs  spritedragdrop.rs  spritelayers.rs  test_material.rs
src/cards/: carnage_tyrant.rs  fireball.rs  mod.rs
src/cards/components/: component_traits.rs  cost.rs  description.rs  gameplay_tag_group.rs  gameplay_tags.rs  image.rs  mod.rs  name.rs
src/cards/compositions/: card_base.rs  card_traits.rs  creature_base.rs  mod.rs
src/cards/systems/: card_construction_kit.rs  mod.rs  register_macro.rs
src/dispatcher/: dispatcher.rs  mod.rs
src/interactions/: helpers.rs  mod.rs  sprite_interactions.rs
src/structures/: mod.rs  netset.rs
