[package]
name = "card_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18"
rand = "0.8"
bevy_egui = "0.20"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
bevy-trait-query = "0.2"
dyn-clone = "1.0"